--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
   --backraund-buttons-team: #f4f4fd;
   --footer-text-color: #e7e9fc;
   --footer-color-media: #31d0aa;
+  --customers: #8e8f99;
 }
 body {
   font-family: 'Roboto', sans-serif;
@@ -40,7 +41,8 @@ button {
   cursor: pointer;
 }
 .container {
-  width: 1158px;
+  max-width: 1158px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -144,10 +146,7 @@ button {
   border-radius: 4px;
   border: 0;
   display: block;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 16px 32px 16px 32px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 48px;
@@ -319,10 +318,54 @@ button {
 .services-item {
   margin-top: 72px;
   display: flex;
-  flex-wrap: wrap;
+
   column-gap: 24px;
   row-gap: 48px;
 }
+
+/* Section 5 */
+
+.customers {
+  padding-top: 130px;
+}
+
+.caption-customers {
+  font-size: 36px;
+  line-height: 40px;
+  text-align: center;
+}
+.customers-list {
+  display: flex;
+  gap: 24px;
+  padding: 0px;
+
+  margin-top: 72px;
+}
+.customers-item {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.customers-menu {
+  width: 168px;
+  height: 88px;
+  border: 1px solid var(--customers);
+  border-radius: 4px;
+  padding: 16px 32px 16px 32px;
+}
+.customers-menu:not(:nth-child(6n)) {
+  margin-right: 24px;
+  text-align: center;
+}
+.customers-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 /*==== Footer ====*/
 
 .footer {
