--- a/css/styles.css
+++ b/css/styles.css
@@ -179,11 +179,25 @@ button {
   padding-top: 32px;
   padding-bottom: 32px;
 }
+/* ----- */
+
+.services-item {
+  margin-top: 72px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
 .menu-item-cards {
   width: calc((100% - 48px) / 3);
   margin-bottom: 0;
 }
-
+.menu-item-cards:hover,
+.menu-item-cards:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 /* ----- */
 .buttons {
   font-family: 'Roboto', sans-serif;
@@ -313,16 +327,6 @@ button {
   background-color: var(--backraund-btn-hover-color);
 }
 
-/* ----- */
-
-.services-item {
-  margin-top: 72px;
-  display: flex;
-
-  column-gap: 24px;
-  row-gap: 48px;
-}
-
 /* Section 5 */
 
 .customers {
@@ -336,34 +340,38 @@ button {
 }
 .customers-list {
   display: flex;
+  justify-content: center;
   gap: 24px;
-  padding: 0px;
-
   margin-top: 72px;
 }
 .customers-item {
   width: 100%;
   height: 100%;
   text-align: center;
-}
-
-.customers-menu {
   width: 168px;
   height: 88px;
+}
+
+.customers-link {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
   border: 1px solid var(--customers);
   border-radius: 4px;
   padding: 16px 32px 16px 32px;
 }
-.customers-menu:not(:nth-child(6n)) {
-  margin-right: 24px;
-  text-align: center;
+.castomers-link:focus,
+.customers-link:hover {
+  border-color: var(--backraund-btn-hover-color);
 }
-.customers-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+.customers-icon {
+  fill: var(--customers);
+}
+
+.castomers-link:focus .customers-icon,
+.customers-link:hover .customers-icon {
+  fill: var(--backraund-btn-hover-color);
 }
 
 /*==== Footer ====*/
