--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,9 @@ button {
 .buttons:focus {
   background: var(--backraund-btn-hover-color);
   color: var(--hero-title-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border: 0;
 }
 .visually-hidden {
   position: absolute;
