--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,6 @@ button {
 /*==== Section 1 ====*/
 
 .section-hero {
-  background: var(--main-title-color);
   padding-top: 188px;
   padding-bottom: 188px;
   background-image: linear-gradient(
@@ -118,10 +117,9 @@ button {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people.jpg);
-  flex-grow: 1;
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-position: 50% 50%;
+  background-size: 1440px;
 }
 
 .hero-title {
@@ -193,8 +191,11 @@ button {
   width: calc((100% - 48px) / 3);
   margin-bottom: 0;
 }
-.menu-item-cards:hover,
-.menu-item-cards:focus {
+.servise-cards {
+  display: block;
+}
+.servise-cards:hover,
+.servise-cards:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -217,7 +218,7 @@ button {
   color: var(--hero-title-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border: 0;
+  border: var(--backraund-btn-hover-color);
 }
 .visually-hidden {
   position: absolute;
@@ -320,7 +321,7 @@ button {
 .social-link {
   display: flex;
   justify-content: center;
-  align-items: center;
+
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -418,6 +419,9 @@ button {
   width: 208px;
 }
 .text-footer-media {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.02em;
   font-size: 16px;
   line-height: 1.5;
   color: var(--footer-text-color);
@@ -429,7 +433,6 @@ button {
 .social-link-footer {
   display: flex;
   justify-content: center;
-  align-items: center;
   gap: 16px;
   width: 100%;
   height: 100%;
@@ -439,7 +442,9 @@ button {
 .social-link-footer:is(:hover, :focus) {
   background-color: var(--footer-color-media);
 }
-
+.social-icon {
+  fill: currentColor;
+}
 .social-list-footer {
   margin: 0;
   display: flex;
