--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,7 @@ button {
   color: var(--hero-title-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border: var(--backraund-btn-hover-color);
+  border-color: var(--backraund-btn-hover-color);
 }
 .visually-hidden {
   position: absolute;
